chore: fix browser compatibility (attempt fix on safari bug)

--- a/express/blocks/make-a-project/make-a-project.css
+++ b/express/blocks/make-a-project/make-a-project.css
@@ -176,8 +176,6 @@ main .make-a-project .make-a-project-projectlist .make-a-project-item picture,
 main .make-a-project .make-a-project-projectlist .make-a-project-item img {
   max-height: 175px;
   max-width: 168px;
-  width: auto;
-  height: auto;
 }
 
 main .make-a-project .make-a-project-projectlist .make-a-project-item picture,
@@ -185,8 +183,17 @@ main .make-a-project .make-a-project-projectlist .make-a-project-item-svg-image 
   display: block;
   overflow: hidden;
   border-radius: 10px;
+}
+
+main .make-a-project .make-a-project-projectlist .make-a-project-item picture {
   line-height: 0;
+}
+
+main .make-a-project .make-a-project-projectlist .make-a-project-item > div:first-child > div:first-child,
+main .make-a-project .make-a-project-projectlist .make-a-project-item > div:first-child > a > div:first-child {
+  overflow: hidden;
   margin-bottom: 12px;
+  border-radius: 10px;
 }
 
 main .make-a-project .make-a-project-projectlist .carousel-platform {
@@ -402,15 +409,18 @@ main .hero-animation-wide-container .hero-animation-wrapper {
 }
 
 main .hero-animation-wide-container .hero-animation-wrapper + .make-a-project-wrapper {
-  background: linear-gradient(var(--color-gray-100), transparent);
+  background: -webkit-linear-gradient(0deg, var(--color-gray-100) 0%, rgba(255,255,255,0) 100%);
+  background: linear-gradient(0deg, var(--color-gray-100) 0%, rgba(255,255,255,0) 100%);
 }
 
 main .hero-animation-wide-container .hero-animation-wrapper + .make-a-project-wrapper .carousel-container .carousel-fader-right {
-  background: linear-gradient(90deg, transparent, rgb(252,252,252));
+  background: -webkit-linear-gradient(90deg, rgba(255,255,255,0) 0%, rgb(252,252,252) 100%);
+  background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgb(252,252,252) 100%);
 }
 
 main .hero-animation-wide-container .hero-animation-wrapper + .make-a-project-wrapper .carousel-container .carousel-fader-left {
-  background: linear-gradient(90deg, rgb(252,252,252), transparent);
+  background: -webkit-linear-gradient(90deg, rgb(252,252,252) 0%, rgba(255,255,255,0) 100%);
+  background: linear-gradient(90deg, rgb(252,252,252) 0%, rgba(255,255,255,0) 100%);
 }
 
 /* Specific sizing rules for Intent-Driven Home Page desktop version */
